Fixed alignment of Edious text. Adjusted live_ted text placement/size.

--- a/src/App.scss
+++ b/src/App.scss
@@ -448,7 +448,7 @@ body {
   font-size: 10vw;
   /* margin-top: -9vh; */
   font-weight: 500;
-  letter-spacing: 1vw;
+  letter-spacing: 0.8vw;
   position: relative;
   top: 0;
 }
@@ -460,11 +460,11 @@ body {
   position: absolute;
   /* margin-top: 23vh; */
   /* font-size: 3.5vh; */
-  letter-spacing: 0.35vw;
+  letter-spacing: 0.37vw;
   bottom: 0;
   font-size: 2.5vw;
   margin-left: 1%;
-  margin-bottom: 8%;
+  margin-bottom: 8.5%;
 }
 
 .out_soon {
