--- a/src/AppMediaQuery.scss
+++ b/src/AppMediaQuery.scss
@@ -29,7 +29,7 @@
     font-size: 7.5em !important;
   }
   .live_ted_text {
-    font-size: 2em;
+    font-size: 1.9em;
   }
 }
 
